--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^3.3.0",
     "styled-components": "^5.3.5"
   },
