--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "babel-eslint": "^10.0.3",
+    "browserslist": "^4.20.4",
+    "caniuse-lite": "^1.0.30001352",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
