--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.0.3",
     "browserslist": "^4.20.4",
     "caniuse-lite": "^1.0.30001352",
