--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.0.3",
     "browserslist": "^4.20.4",
     "caniuse-lite": "^1.0.30001352",
@@ -15,6 +16,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-form-data": "^0.2.4",
     "react-material-toast": "^16.1.7",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
