--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^3.3.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uid": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
