--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^3.3.0",
     "styled-components": "^5.3.5",
-    "uid": "^2.0.0"
+    "uid": "^2.0.0",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
